[project]
name = "listener"
version = "0.1.0"
description = "macOS menu bar app for speech-to-text using Whisper"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rumps>=0.4.0",
    "pynput>=1.7.6",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "pyperclip>=1.8.2",
    "scipy>=1.11.0",
    "faster-whisper>=1.0.0",
]
